# Municipal-Corporation-Management-System-GHMC-

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Municipal_corporation_management_system/: asgi.py  settings.py  wsgi.py
myApp/: admin.py  forms.py  models.py  urls.py  views.py
myApp/migrations/: 0001_initial.py  0002_auto_20240328_2300.py  0003_auto_20240330_1018.py  0004_auto_20240330_1108.py  0005_alter_compliant_aadhar_no.py
myenv/: pip-selfcheck.json  pyvenv.cfg
myenv/Scripts/: Activate.ps1  activate  activate.bat  django-admin.py
static/assets/css/: bootstrap.css  main.css  style.css
templates/: about.html  base.html  base2.html  compliant_status.html  index.html  login.html  password_reset.html  register.html
templates/govt_event/: confirm_delete.html  create_event.html  edit_event.html  event_list.html
